# pdf-signature-signer

./: README.md  pyproject.toml  requirements.txt
signature_signer/: __init__.py  config.py  diagnostics.py  main.py  models.py  pdf_geometry.py  pdf_service.py
signature_signer/ui/: main_window.py  pdf_view.py
tests/: test_pdf_service.py
