[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-signature-signer"
version = "0.1.0"
description = "Lightweight local-first PDF visual signature tool"
requires-python = ">=3.10"
dependencies = [
  "PyQt6",
  "PyMuPDF",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["signature_signer*"]
