[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-signature-signer"
version = "0.1.0"
description = "Lightweight local-first PDF visual signature tool"
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF==1.28.0",
  "PyQt6==6.11.0",
  "PyQt6-Qt6==6.11.1",
  "PyQt6-sip==13.11.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["signature_signer*"]
